added unordered list for multiple choice, and div tag for correct or incorrect answer.

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
 
     <div id="questions">
-        <ol id = "ordered-list">
+        <ul id = "ordered-list">
 
-        </ol>
+        </ul>
 
     </div>
-    <form>
-        <!-- <button id="button">Start Quiz</button> -->
-    </form>
+
+    <div id = "response"></div>
+    
 
 
 
