corrected error preventing questions from cycling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 
-<body>
+<body id = "body">
     <ul class="nav">
         <li class="nav-item">
             <a class="nav-link active" href="#">View High Scores</a>
@@ -48,14 +48,22 @@
 
 
     <div id="questions">
-        <ul id = "ordered-list">
+        <ul id="ordered-list">
 
         </ul>
 
     </div>
 
-    <div id = "response"></div>
-    
+    <div id="response"></div>
+
+
+    <div id = "save-score">
+        <form id = "input-form">
+            <!-- <input type="text" name="name" id="name">  -->
+            <!-- <button id = "save-name">Submit</button> -->
+        </form>
+    </div>
+
 
 
 
