--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <body id = "body">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" href="#">View High Scores</a>
+            <a class="nav-link active high-score" href="#">View High Scores</a>
+                <div id = "high"></div>
         </li>
         <li class="nav-item ml-auto px-5">
-            <nav class="nav-link" href="#">Timer:<span id="timer"></span></nav>
+            <nav class="nav-link text-primary" href="#">Timer:<span id="timer"></span></nav>
         </li>
     </ul>
     <div class="container">
@@ -24,20 +25,20 @@
             <!-- <div class="col-sm">
             One of three columns
           </div> -->
-            <div class="col-md-7 ml-auto pr-5 pt-5">
+            <div class="col-md-7 text-primary ml-auto pr-5 pt-5">
                 <h1>Coding Quiz</h1>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-sm-9 ml-auto pr-5">
-                <p>Try to answer the following code-related questions within the limit.
-                    Keep in mind that incorrect answers will penalize your score
-                    time by 15 seconds</p>
+        <div class="row justify-content-center jumbotron bg-secondary">
+            <div class="col-sm-9 ml-5 pr-5">
+                <h3>Try to answer the following code-related questions within the time limit.
+                    Incorrect answers will penalize your score
+                    time by 15 seconds</h3>
             </div>
             <div class="row">
                 <div class="col-sm-12 pr-5">
                     <form>
-                        <button id="button">Start Quiz</button>
+                        <button id="button" class ="btn btn-primary ml-5">Start Quiz</button>
                     </form>
 
                 </div>
@@ -55,14 +56,8 @@
     </div>
 
     <div id="response"></div>
+    
 
-
-    <div id = "save-score">
-        <form id = "input-form">
-            <!-- <input type="text" name="name" id="name">  -->
-            <!-- <button id = "save-name">Submit</button> -->
-        </form>
-    </div>
 
 
 
