added div container for page reload button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 
     </div>
 
-    <div id="response"></div>
+    <div id="response">
+        
+    </div>
+    <div id = "view-high-button"></div>
+
     
 
 
